[gd_scene load_steps=3 format=3 uid="uid://0wrlw2re43ud"]

[ext_resource type="Script" uid="uid://csacdf5onnss2" path="res://scripts/weapon_data_card.gd" id="1_1mlx2"]
[ext_resource type="Texture2D" uid="uid://5qsdr8kgiqe3" path="res://assets/sprites/Weapons/Icons/weapon_smg_icon.png" id="2_gne0w"]

[node name="weapon_data_card" type="Control"]
custom_minimum_size = Vector2(450, 250)
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -225.0
offset_top = -125.0
offset_right = 225.0
offset_bottom = 125.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4
script = ExtResource("1_1mlx2")

[node name="MarginContainer" type="MarginContainer" parent="."]
custom_minimum_size = Vector2(400, 200)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -10.0
offset_top = -8.0
offset_right = 10.0
offset_bottom = 8.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="PanelContainer" type="PanelContainer" parent="MarginContainer/HBoxContainer"]
layout_mode = 2
theme_type_variation = &"PanelContainerWarningFlat"

[node name="icon" type="TextureRect" parent="MarginContainer/HBoxContainer/PanelContainer"]
layout_mode = 2
texture = ExtResource("2_gne0w")

[node name="PanelContainer2" type="PanelContainer" parent="MarginContainer/HBoxContainer"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
theme_type_variation = &"PanelContainerWarningFlat"

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/HBoxContainer/PanelContainer2"]
layout_mode = 2

[node name="_name" type="Label" parent="MarginContainer/HBoxContainer/PanelContainer2/VBoxContainer"]
layout_mode = 2
text = "11111"

[node name="base_damage" type="Label" parent="MarginContainer/HBoxContainer/PanelContainer2/VBoxContainer"]
layout_mode = 2
text = "11111"

[node name="critical_rate" type="Label" parent="MarginContainer/HBoxContainer/PanelContainer2/VBoxContainer"]
layout_mode = 2
text = "11111"

[node name="attack_speed" type="Label" parent="MarginContainer/HBoxContainer/PanelContainer2/VBoxContainer"]
layout_mode = 2
text = "11111"
